// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abbr 1`] = `
"\\\\abbr{FOO}{bar}

"
`;

exports[`abbr with custom config 1`] = `
"->FOO<-

"
`;

exports[`blockquote 1`] = `
"\\\\begin{Quotation}
a quote
\\\\end{Quotation}



\\\\begin{Quotation}
a
multiline
quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a
multiline
quote
\\\\end{Quotation}"
`;

exports[`blockquote 2`] = `
"\\\\begin{Quotation}
a quote
\\\\end{Quotation}



\\\\begin{Quotation}
a
multiline
quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a
multiline
quote
\\\\end{Quotation}"
`;

exports[`blockquote with custom config 1`] = `
"\\\\begin{Foo}
a quote
\\\\end{Foo}



\\\\begin{Foo}
a
multiline
quote
\\\\end{Foo}



\\\\horizontalLine



\\\\begin{Foo}
a quote
\\\\end{Foo}



\\\\horizontalLine



\\\\begin{Foo}
a
multiline
quote
\\\\end{Foo}"
`;

exports[`code 1`] = `
"\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}



\\\\begin{CodeBlock}{text}
a code without lang
\\\\end{CodeBlock}"
`;

exports[`code+caption 1`] = `
"\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\captionof{listing}{With Source}"
`;

exports[`comments blocks 1`] = `
"Foo<--COMMENTS I am a comment COMMENTS-->bar

"
`;

exports[`custom-blocks 1`] = `
"\\\\begin{Information}
info
\\\\end{Information}


\\\\begin{Warning}
warning
\\\\end{Warning}


\\\\begin{FooBar}
secret
\\\\end{FooBar}


\\\\begin{FooBar}
imbricated spoilers

and another

and that's it
\\\\end{FooBar}


\\\\begin{FooBar}
imbricated spoilers

second level

second level too
\\\\end{FooBar}


\\\\begin{FooBar}
imbricated spoilers

second level

with text in between

second level too
\\\\end{FooBar}


\\\\begin{FooBar}
imbricated spoilers

\\\\begin{CodeBlock}{markdown}
and here is some code
\\\\end{CodeBlock}

second level
\\\\end{FooBar}


\\\\begin{FooBar}
do not over-flattenize

expected to be flattened

first level

\\\\begin{Question}
this remains a question
\\\\end{Question}
\\\\end{FooBar}


\\\\begin{FooBar}
flattenize children of children

\\\\begin{Question}
this remains a question

but the content in it is flattened to the question
\\\\end{Question}
\\\\end{FooBar}


\\\\begin{Question}
question \\\\texttt{coded}
\\\\end{Question}


\\\\begin{Error}
\\\\textbf{error}
foo bar \\\\\\\\
baz
\\\\end{Error}


\\\\begin{Error}[{{a bad error}}]
\\\\textbf{error}
foo bar \\\\\\\\
baz
\\\\end{Error}


\\\\begin{Neutre}[{{\\\\textbf{title}}}]
foo
\\\\end{Neutre}"
`;

exports[`emoticon 1`] = `
"foo :p bar \\\\smiley{/path/to/smile.png}



\\\\smiley{/path/to/wink.png}"
`;

exports[`figure+caption 1`] = `
"\\\\begin{Quotation}[With Source]
a
multiline
quote
\\\\end{Quotation}



\\\\begin{longtabu} spread 0pt {|X[-1]|X[-1]|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
Nom & Age \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
Fred & 39 \\\\\\\\ \\\\hline
Sam & 38 \\\\\\\\ \\\\hline
Alice & 35 \\\\\\\\ \\\\hline
Mathilde & 35 \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu} spread 0pt {|X[-1]|X[-1]|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
Nom & Age \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
Fred & 39 \\\\\\\\ \\\\hline
Sam & 38 \\\\\\\\ \\\\hline
Alice & 35 \\\\\\\\ \\\\hline
Mathilde & 35 \\\\\\\\ \\\\hline
\\\\end{longtabu}
\\\\captionof{table}{Coucou}"
`;

exports[`footnotes 1`] = `
"\\\\part{International Radiotelephony Spelling Alphabet\\\\textsuperscript{\\\\footnotemark{footnote:wiki}}}


Here's the NATO phonetic alphabet\\\\textsuperscript{\\\\footnotemark{footnote:wiki}}: Alfa, Bravo, Charlie, Delta, Echo, Foxtrot, Golf, Hotel, India, Juliet, Kilo, Lima, Mike, November, Oscar, Papa, Quebec, Romeo, Sierra, Tango, Uniform, Victor\\\\textsuperscript{\\\\footnotemark{footnote:name}}\\\\textsuperscript{\\\\footnotemark{footnote:consecutive}}, Whiskey, X-ray, Yankee, and Zulu.



And here's some more text.



\\\\footnotetext[wiki]{\\\\footnotemark{footnote:wiki} Read more about it here.}

\\\\footnotetext[wiki]{\\\\footnotemark{footnote:wiki} And here.}

\\\\footnotetext[wiki2]{\\\\footnotemark{footnote:wiki2} Here's another good article on the subject.}

\\\\footnotetext[name]{\\\\footnotemark{footnote:name} A great first name.}

\\\\footnotetext[consecutive]{\\\\footnotemark{footnote:consecutive} I know.}

The NATO phonetic alphabet\\\\textsuperscript{\\\\footnotemark{footnote:wi\\\\-ki}}.



\\\\footnotetext[wi\\\\-ki]{\\\\footnotemark{footnote:wi\\\\-ki} Read more about it somewhere else.}

This example checks that \\\\footnote[l17c26o614]{\\\\footnotemark{footnote:l17c26o614} the generated} IDs do not overwrite the user's IDs\\\\textsuperscript{\\\\footnotemark{footnote:1}}.



\\\\footnotetext[1]{\\\\footnotemark{footnote:1} Old behavior would, for \\"generated\\", generate a footnote with an ID set to \\\\texttt{1}, thus overwriting this footnote.}

The NATO phonetic alphabet\\\\textsuperscript{\\\\footnotemark{footnote:wiki3}}.



\\\\footnotetext[wiki3]{\\\\footnotemark{footnote:wiki3} Read more about it somewhere else.}

This is an example of an inline footnote.\\\\footnote[l25c42o918]{\\\\footnotemark{footnote:l25c42o918} This is the \\\\textit{actual} footnote.}



This one isn't even [defined].



\\\\textsuperscript{\\\\footnotemark{footnote:both}}[invalid], \\\\footnote[l29c19o1015]{\\\\footnotemark{footnote:l29c19o1015} this too}[].



\\\\begin{enumerate}
\\\\item\\\\relax \\\\hyperref[bar]{foo}
\\\\item\\\\relax \\\\textsuperscript{\\\\footnotemark{footnote:foo}}\\\\hyperref[bar]{bar}
\\\\item\\\\relax [foo]
\\\\item\\\\relax \\\\textsuperscript{\\\\footnotemark{footnote:foo}}\\\\textsuperscript{\\\\footnotemark{footnote:bar}}
\\\\end{enumerate}


A footnote\\\\textsuperscript{\\\\footnotemark{footnote:2}}.



\\\\footnotetext[2]{\\\\footnotemark{footnote:2} Including \\\\footnote[l38c17o1125]{\\\\footnotemark{footnote:l38c17o1125} another \\\\textbf{footnote}}}

A footnote\\\\textsuperscript{\\\\footnotemark{footnote:tostring}} and \\\\textsuperscript{\\\\footnotemark{footnote:__proto__}} and \\\\textsuperscript{\\\\footnotemark{footnote:constructor}}.



\\\\footnotetext[tostring]{\\\\footnotemark{footnote:tostring} See \\\\texttt{Object.prototype.toString()}.}

\\\\footnotetext[constructor]{\\\\footnotemark{footnote:constructor} See \\\\texttt{Object.prototype.valueOf()}.}

\\\\footnotetext[__proto__]{\\\\footnotemark{footnote:__proto__} See \\\\texttt{Object.prototype.\\\\_\\\\_proto\\\\_\\\\_()}.}

foo\\\\textsuperscript{\\\\footnotemark{footnote:abc}} bar. foo\\\\textsuperscript{\\\\footnotemark{footnote:xyz}} bar



\\\\footnotetext[abc]{\\\\footnotemark{footnote:abc} Baz baz}

\\\\footnotetext[xyz]{\\\\footnotemark{footnote:xyz} Baz}

Lorem ipsum dolor sit amet\\\\textsuperscript{\\\\footnotemark{footnote:3}}.



Nulla finibus\\\\textsuperscript{\\\\footnotemark{footnote:4}} neque et diam rhoncus convallis.



\\\\footnotetext[3]{\\\\footnotemark{footnote:3} Consectetur \\\\textbf{adipiscing} elit. Praesent dictum purus ullamcorper ligula semper pellentesque\\\\textsuperscript{\\\\footnotemark{footnote:3}}.

\\\\begin{itemize}
\\\\item\\\\relax Containing a list.
\\\\end{itemize}}

\\\\footnotetext[4]{\\\\footnotemark{footnote:4} Nam dictum sapien nec sem ultrices fermentum. Nulla \\\\textbf{facilisi}. In et feugiat massa.}

\\\\footnotetext[5]{\\\\footnotemark{footnote:5} Nunc dapibus ipsum ut mi \\\\textit{ultrices}, non euismod velit pretium.}

Here is some text containing a footnote\\\\textsuperscript{\\\\footnotemark{footnote:somesamplefootnote}}. You can then continue your thought...



\\\\footnotetext[somesamplefootnote]{\\\\footnotemark{footnote:somesamplefootnote} Here is the text of the footnote itself.}

Even go to a new \\\\hyperref[paragraph]{paragraph} and the footnotes will go to the bottom of the document\\\\textsuperscript{\\\\footnotemark{footnote:documentdetails}}.



\\\\footnotetext[documentdetails]{\\\\footnotemark{footnote:documentdetails} Depending on the \\\\textbf{final} form of your document, of course. See the documentation and experiment.

This footnote has a second \\\\hyperref[paragraph]{paragraph}.}

\\\\footnote{\\\\label{paragraph}\\\\externalLink{http://example.com}{http://example.com}}

\\\\part{my heading\\\\footnote[l76c13o2284]{\\\\footnotemark{footnote:l76c13o2284} ref def}\\\\protect}


or



\\\\part{my heading\\\\textsuperscript{\\\\footnotemark{footnote:ref}}}


\\\\footnotetext[ref]{\\\\footnotemark{footnote:ref} def}

First\\\\footnote[l84c6o2338]{\\\\footnotemark{footnote:l84c6o2338} the generated} and then a manual numbered def\\\\textsuperscript{\\\\footnotemark{footnote:def}}.



\\\\footnotetext[def]{\\\\footnotemark{footnote:def} hello}

\\\\begin{itemize}
\\\\item\\\\relax one\\\\footnote[l89c6o2415]{\\\\footnotemark{footnote:l89c6o2415} the first}
\\\\item\\\\relax two\\\\textsuperscript{\\\\footnotemark{footnote:2nd}}
\\\\item\\\\relax three\\\\textsuperscript{\\\\footnotemark{footnote:3rd}}
\\\\item\\\\relax four\\\\footnote[l92c7o2460]{\\\\footnotemark{footnote:l92c7o2460} the last}
\\\\end{itemize}


\\\\footnotetext[2nd]{\\\\footnotemark{footnote:2nd} second}

\\\\footnotetext[3rd]{\\\\footnotemark{footnote:3rd} third}

This nested footnote would not work:



\\\\hyperref[baz]{\\\\textsuperscript{\\\\footnotemark{footnote:foo2}}}



\\\\footnote{\\\\label{bar}\\\\externalLink{https://bar.com}{https://bar.com}}

\\\\footnote{\\\\label{baz}\\\\externalLink{https://baz.com}{https://baz.com}}

\\\\footnotetext[foo2]{\\\\footnotemark{footnote:foo2} A footnote.}

\\\\chapter{New list continuation}


\\\\begin{enumerate}
\\\\item\\\\relax \\\\textsuperscript{\\\\footnotemark{footnote:foo}}
\\\\end{enumerate}


\\\\footnotetext[foo]{\\\\footnotemark{footnote:foo} bar baz.}

\\\\part{mytitle A\\\\textsuperscript{\\\\footnotemark{footnote:footnoteref}}}


\\\\footnotetext[footnoteref]{\\\\footnotemark{footnote:footnoteref} reference in title}

\\\\part{mytitle B\\\\footnote[l117c12o2768]{\\\\footnotemark{footnote:l117c12o2768} footnoterawhead inner}\\\\protect}


\\\\part{myti\\\\textit{tle C\\\\footnote[l119c13o2806]{\\\\footnotemark{footnote:l119c13o2806} foo inner}\\\\protect}}


a paragraph\\\\footnote[l121c12o2832]{\\\\footnotemark{footnote:l121c12o2832} footnoteRawPar inner}

"
`;

exports[`gridTable 1`] = `
"\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
Sub & Headings & ABBR \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{cell \\\\endgraf spans \\\\endgraf rows}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{ABBR   spanning}} \\\\\\\\ \\\\cline{2-3}
 & normal & cell \\\\\\\\ \\\\hline
multi \\\\endgraf line \\\\endgraf \\\\endgraf cells \\\\endgraf too & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{cells can be \\\\endgraf \\\\textit{formatted} \\\\endgraf \\\\textbf{paragraphs}}} \\\\\\\\ \\\\hline
\\\\end{longtabu}
\\\\captionof{table}{The new table ABBR [\\\\textasciicircum{}foot] with ||CTRL|| + ||S||}



*[ABBR]: abbreviation



[\\\\textasciicircum{}foot]: a foot



\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 2 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 2 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
title & image \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
space & \\\\inlineImage{https://i.ytimg.com/vi/lt0WQ8JzLz4/maxresdefault.jpg} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 2 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 2 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
title & code \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
inline & \\\\texttt{inline} br \\\\endgraf \\\\texttt{inline} \\\\\\\\ \\\\hline
block & \\\\hyperref[appendix-1]{Code appendice 1} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{D}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{E}} \\\\\\\\ \\\\cline{2-3}
 & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C & D \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{D}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{E}} &  \\\\\\\\ \\\\cline{2-4}
 & F & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{G}} \\\\\\\\ \\\\hline
a & b & \\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{c   d \\\\endgraf \\\\endgraf g}} \\\\\\\\ \\\\cline{1-2}
e & f &  &  \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{Table Headings}} & Here \\\\\\\\ \\\\hline
Sub & Headings & Too \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{cell \\\\endgraf spans \\\\endgraf rows}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{column[\\\\textasciicircum{}foot]}} \\\\\\\\ \\\\cline{2-3}
 & normal & cell \\\\\\\\ \\\\hline
multi \\\\endgraf line \\\\endgraf \\\\endgraf cells \\\\endgraf too & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{cells can be \\\\endgraf \\\\textit{formatted} \\\\endgraf \\\\textbf{paragraphs}}} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{D}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{E}} \\\\\\\\ \\\\cline{2-3}
 & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multirow{3}{*}{\\\\parbox{\\\\linewidth}{A}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{B}} \\\\\\\\ \\\\cline{2-3}
\\\\rowfont[l]{}
 & C & D \\\\\\\\ \\\\cline{2-3}
 & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{E}} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C & D \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{E}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{F}} \\\\\\\\ \\\\hline
\\\\multicolumn{4}{|m{\\\\dimexpr(\\\\linewidth) * 4 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{G}} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multicolumn{4}{|m{\\\\dimexpr(\\\\linewidth) * 4 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{A}} \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{B}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{C}} \\\\\\\\ \\\\hline
D & E & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
H & \\\\multicolumn{16}{|m{\\\\dimexpr(\\\\linewidth) * 16 / 18 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{}} & He \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
Li & Be & \\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{}} & B & C & N & O & F & Ne \\\\\\\\ \\\\cline{1-2} \\\\cline{13-18}
Na & Mg &  &  &  &  &  &  &  &  &  &  & Al & Si & P & S & Cl & Ar \\\\\\\\ \\\\hline
K & Ca & Sc & Ti & V & Cr & Mn & Fe & Co & Ni & Cu & Zn & Ga & Ge & As & Se & Br & Kr \\\\\\\\ \\\\hline
Rb & Sr & Y & Zr & Nb & Mo & Tc & Ru & Rh & Pd & Ag & Cd & In & Sn & Sb & Te & I & Xe \\\\\\\\ \\\\hline
Cs & Ba & LAN & Hf & Ta & W & Re & Os & Ir & Pt & Au & Hg & Tl & Pb & Bi & Po & At & Rn \\\\\\\\ \\\\hline
Fr & Ra & ACT & \\\\multicolumn{15}{|m{\\\\dimexpr(\\\\linewidth) * 15 / 18 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{}} \\\\\\\\ \\\\hline
\\\\multicolumn{18}{|m{\\\\dimexpr(\\\\linewidth) * 18 / 18 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{}} \\\\\\\\ \\\\hline
\\\\multicolumn{3}{|m{\\\\dimexpr(\\\\linewidth) * 3 / 18 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{Lanthanide}} & La & Ce & Pr & Nd & Pm & Sm & Eu & Gd & Tb & Dy & Ho & Er & Tm & Yb & Lu \\\\\\\\ \\\\hline
\\\\multicolumn{3}{|m{\\\\dimexpr(\\\\linewidth) * 3 / 18 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{Actinide}} & Ac & Th & Pa & U & Np & Pu & Am & Cm & Bk & Cf & Es & Fm & Md & No & Lw \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 1 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A \\\\\\\\ \\\\hline
\\\\end{longtabu}


Text at the end



\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 1 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A \\\\\\\\ \\\\hline
\\\\end{longtabu}


Text at the



\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
a & \\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{}} &  \\\\\\\\ \\\\cline{1-1}
\\\\rowfont[l]{}
b &  &  & c \\\\\\\\ \\\\hline
\\\\end{longtabu}
\\\\captionof{table}{multirow}



\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 5 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 5 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 5 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 5 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 5 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 5 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{span}} & header & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 5 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{span}} \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
elem & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 5 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{span middle}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 5 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{}} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{appendices}
\\\\part{\\\\label{appendix-1}Annexes 1}

\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\end{appendices}"
`;

exports[`heading 1`] = `
"\\\\part{first level title}


\\\\chapter{second level title}


\\\\section{third level title}


\\\\subsection{fourth level title}


\\\\subsubsection{fifth level title}


\\\\paragraph{sixth level title}


\\\\part{a \\\\textbackslash{} b}


\\\\part{a \\\\} b}


\\\\part{a \\\\} \\\\textbackslash{} b}


\\\\part{a \\\\} b}


\\\\part{\\\\includegraphics{https://www.johnfdoherty.com/wp-content/uploads/2011/07/Titles1.jpg}}


\\\\part{a title with \\\\includegraphics{https://www.johnfdoherty.com/wp-content/uploads/2011/07/Titles1.jpg} and text}
"
`;

exports[`heading with custom config 1`] = `
"\\\\LevelOneTitle{first level title}


\\\\LevelTwoTitle{second level title}


\\\\LevelThreeTitle{third level title}


\\\\LevelFourTitle{fourth level title}


\\\\LevelFiveTitle{fifth level title}


\\\\LevelSixTitle{sixth level title}


\\\\LevelOneTitle{a \\\\textbackslash{} b}


\\\\LevelOneTitle{a \\\\} b}


\\\\LevelOneTitle{a \\\\} \\\\textbackslash{} b}


\\\\LevelOneTitle{a \\\\} b}


\\\\LevelOneTitle{\\\\inlineImage{https://www.johnfdoherty.com/wp-content/uploads/2011/07/Titles1.jpg}}


\\\\LevelOneTitle{a title with \\\\inlineImage{https://www.johnfdoherty.com/wp-content/uploads/2011/07/Titles1.jpg} and text}
"
`;

exports[`html nodes 1`] = `
"\\\\part{foo}


\\\\textbf{something <a> else}

"
`;

exports[`inline-code 1`] = `
"a paragraph \\\\texttt{with inline code}.



\\\\texttt{a multiline inlinecode}



\\\\texttt{a code with \\\\textbackslash{}}



\\\\texttt{a \\\\textbackslash{}text in \\\\textbackslash{}LaTeX \\\\textbackslash{}\\\\textbackslash{}}"
`;

exports[`link 1`] = `
"\\\\externalLink{an external link}{https://wikipedia.com}



\\\\externalLink{an internal link}{/forums}



\\\\externalLink{an \\\\texttt{external} link}{https://wikipedia.com}"
`;

exports[`link with special characters 1`] = `"\\\\externalLink{foo}{http://example.com?a=b\\\\%c\\\\textasciicircum{}\\\\{\\\\}\\\\#foo}"`;

exports[`link-prepend 1`] = `
"\\\\externalLink{an external link}{https://wikipedia.com}



\\\\externalLink{an internal link}{http://zestedesavoir.com/forums}



\\\\externalLink{an \\\\texttt{external} link}{https://wikipedia.com}"
`;

exports[`list 1`] = `
"\\\\begin{itemize}
\\\\item\\\\relax an
\\\\item\\\\relax \\\\textbf{unordered}
\\\\item\\\\relax list
\\\\end{itemize}


\\\\begin{enumerate}
\\\\item\\\\relax an
\\\\item\\\\relax \\\\texttt{ordered}
\\\\item\\\\relax list
\\\\end{enumerate}"
`;

exports[`math 1`] = `
"A sentence ($S$) with \\\\textit{italic} and inline math ($C_L$) and $b$ another.



\\\\[ L = \\\\frac{1}{2} \\\\rho v^2 S C_L \\\\]



hehe

"
`;

exports[`mix-1 1`] = `
"(for convenience,   are replaced with simple single spaces in the tests)



\\\\part{first 1}


foo \\\\\\\\
bar



Disrupt \\\\sout{asymmetrical} unicorn, pok pok kale chips umami selfies gastropub food truck flannel. Blue \\\\textbf{bottle craft} beer hexagon artisan. Chia gochujang crucifix, \\\\textsuperscript{ready} \\\\textsuperscript{made} hammock \\\\textit{blog succulents} sriracha raw denim scenester cray typewriter fashion axe \\\\textsubscript{art} \\\\textit{party}. Schlitz tacos tilde intelligentsia, unicorn fixie adaptogen beard 8-bit street \\\\textsubscript{art} typewriter.



\\\\chapter{\\\\textit{second} 1}


\\\\textbf{Literally selfies tbh lo-fi. Actually health goth ennui, brooklyn retro polaroid sriracha. Kogi live-edge mixtape marfa street \\\\textsubscript{art} synth. Godard synth truffaut selfies, vape fanny \\\\sout{pack} subway tile. Stumptown af pabst, try-hard fam ethical actually four dollar toast. Microdosing kogi brooklyn, locavore jianbing etsy sartorial \\\\textit{YOLO}. Williamsburg salvia photo booth \\\\textsuperscript{readymade} listicle man braid.}



\\\\horizontalLine



\\\\begin{Quotation}[Guru]
Marfa pickled helvetica put a bird on it hot chicken williamsburg.
Edison bulb asymmetrical \\\\texttt{keffiyeh} schlitz iceland put a bird on it hoodie affogato.

Tofu tote bag distillery viral knausgaard, health goth asymmetrical.
\\\\end{Quotation}



Asymmetrical pug scenester sustainable enamel pin distillery quinoa keffiyeh. Flannel humblebrag PBR\\\\&B polaroid banh mi wolf. Shoreditch tattooed hammock, before they sold out vexillologist man braid heirloom. Activated charcoal craft beer cloud bread meh biodiesel pabst.



\\\\section{\\\\sout{third} 1}


Art party keytar godard iceland neutra cronut. Austin \\\\textsuperscript{readymade} semiotics, edison bulb cloud bread adaptogen blue bottle jean shorts DIY. Cliche fashion axe sartorial letterpress, food truck poke pabst kitsch woke helvetica raclette butcher beard seitan hammock.



\\\\texttt{foo bar}



\\\\begin{Quotation}
\\\\texttt{fo\\\\textbackslash{}o bar}
\\\\end{Quotation}



Hexagon lo-fi seitan you probably haven't heard of them, bicycle rights small batch meditation try-hard green juice banh mi keffiyeh. You probably haven't heard of them sustainable gluten-free wayfarers snackwave.



\\\\section{third 2}


\\\\subsection{\\\\sout{fo}u\\\\textbf{r}t\\\\textit{h} \\\\textit{1}}


Mumblecore kombucha offal, health goth next level before they sold out gluten-free chicharrones keffiyeh. Mumblecore kickstarter hoodie fixie keffiyeh. Microdosing lo-fi taiyaki irony pok pok. Banjo brooklyn umami succulents flexitarian. Swag sartorial scenester synth viral.



\\\\subsubsection{fifth 1}


Banjo bespoke subway tile, street \\\\textsubscript{a\\\\textit{r}}\\\\textsuperscript{t} drinking vinegar offal franzen. Pour-over green juice vaporware kale chips. Meggings cronut affogato PBR\\\\&B, \\\\textsubscript{art} party unicorn dreamcatcher schlitz yuccie mixtape 90's thundercats air plant. Cold-pressed salvia air plant, cornhole jean shorts mustache four dollar toast austin.



\\\\section{third 3}


Meditation heirloom chicharrones, sartorial man braid hot chicken sustainable. Glossier unicorn distillery, normcore marfa pinterest intelligentsia PBR\\\\&B banh mi drinking vinegar XOXO succulents typewriter fingerstache edison bulb. Meditation ethical cronut glossier cliche kickstarter.



\\\\subsection{fourth 2}


Venmo bushwick food truck chartreuse fam. Everyday carry gastropub glossier, cold-pressed salvia migas keytar. Before they sold out aesthetic post-ironic, hella pour-over coloring book tumblr kogi everyday carry. Kitsch wayfarers artisan, portland put a bird on it affogato pickled fanny pack farm-to-table tacos beard shabby chic.



\\\\subsection{fourth 3}


Chambray intelligentsia vape listicle. Pok pok snackwave cronut retro hot chicken, trust fund master cleanse keytar forage dreamcatcher. Taiyaki actually deep v, godard small batch irony lumbersexual unicorn cardigan af. Irony lumbersexual salvia, pitchfork fam snackwave man bun. Kitsch jianbing intelligentsia freegan, waistcoat raw denim cloud bread vice cray etsy listicle skateboard jean shorts.



\\\\subsubsection{fifth 2}


Asymmetrical normcore portland, vaporware viral tote bag DIY slow-carb kogi fanny pack. Keffiyeh ennui church-key, irony VHS man bun edison bulb listicle cloud bread try-hard cred lumbersexual lo-fi glossier.



\\\\part{first 2}


\\\\chapter{second 2}


\\\\subsubsection{fifth 3}


Messenger bag locavore swag raclette brunch whatever, portland food truck. PBR\\\\&B cred mlkshk, poke letterpress waistcoat celiac. La croix letterpress forage keffiyeh."
`;

exports[`mix-2 1`] = `
"(for convenience,   are replaced with simple single spaces in the tests)



\\\\part{first 1}


\\\\begin{Quotation}[Quotation Source]
Code inside quote

\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\captionof{listing}{code source}
\\\\end{Quotation}



\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\captionof{listing}{First \\\\keys{CTRL}+\\\\keys{S}}



Code: Second



\\\\begin{CodeBlock}{python}
print('code without caption')
\\\\end{CodeBlock}"
`;

exports[`mix-3 1`] = `
"\\\\part{right-aligned list}



{\\\\raggedleft
\\\\begin{itemize}
\\\\item\\\\relax item
\\\\item\\\\relax item
\\\\end{itemize}
}


\\\\part{centered list}



{\\\\centering \\\\begin{itemize}
\\\\item\\\\relax item
\\\\item\\\\relax item
\\\\item\\\\relax item
\\\\end{itemize}
}


\\\\part{left list}




\\\\begin{itemize}
\\\\item\\\\relax item
\\\\item\\\\relax item
\\\\item\\\\relax item
\\\\end{itemize}"
`;

exports[`mix-4 1`] = `
"\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
Sub & Headings & \\\\abbr{ABBR}{abbreviation} \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{cell \\\\endgraf spans \\\\endgraf rows}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{column spanning}} \\\\\\\\ \\\\cline{2-3}
 & normal & cell \\\\\\\\ \\\\hline
multi \\\\endgraf line \\\\endgraf \\\\endgraf cells \\\\endgraf too & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{cells can be \\\\endgraf \\\\textit{formatted} \\\\endgraf \\\\textbf{paragraphs}}} \\\\\\\\ \\\\hline
\\\\end{longtabu}
\\\\captionof{table}{The new table \\\\abbr{ABBR}{abbreviation} \\\\textsuperscript{\\\\footnotemark{footnote:foot}} with \\\\keys{CTRL} + \\\\keys{S}}



\\\\footnotetext[foot]{\\\\footnotemark{footnote:foot} a foot}

\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 2 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 2 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
title & image \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
space & \\\\inlineImage{https://i.ytimg.com/vi/lt0WQ8JzLz4/maxresdefault.jpg} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 2 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 2 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
title & code \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
inline & \\\\texttt{inline} br \\\\endgraf \\\\texttt{inline} \\\\\\\\ \\\\hline
block & \\\\hyperref[appendix-1]{Code appendice 1} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{D}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{E}} \\\\\\\\ \\\\cline{2-3}
 & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C & D \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{D}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{E}} &  \\\\\\\\ \\\\cline{2-4}
 & F & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{G}} \\\\\\\\ \\\\hline
a & b & \\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{c   d \\\\endgraf \\\\endgraf g}} \\\\\\\\ \\\\cline{1-2}
e & f &  &  \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{Table Headings}} & Here \\\\\\\\ \\\\hline
Sub & Headings & Too \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{cell \\\\endgraf spans \\\\endgraf rows}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{column spanning}} \\\\\\\\ \\\\cline{2-3}
 & normal & cell \\\\\\\\ \\\\hline
multi \\\\endgraf line \\\\endgraf \\\\endgraf cells \\\\endgraf too & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{cells can be \\\\endgraf \\\\textit{formatted} \\\\endgraf \\\\textbf{paragraphs}}} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{D}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{E}} \\\\\\\\ \\\\cline{2-3}
 & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multirow{3}{*}{\\\\parbox{\\\\linewidth}{A}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{B}} \\\\\\\\ \\\\cline{2-3}
\\\\rowfont[l]{}
 & C & D \\\\\\\\ \\\\cline{2-3}
 & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{E}} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A & B & C & D \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{E}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{F}} \\\\\\\\ \\\\hline
\\\\multicolumn{4}{|m{\\\\dimexpr(\\\\linewidth) * 4 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{G}} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
\\\\multicolumn{4}{|m{\\\\dimexpr(\\\\linewidth) * 4 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{A}} \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{B}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 4 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{C}} \\\\\\\\ \\\\hline
D & E & F & G \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 18 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
H & \\\\multicolumn{16}{|m{\\\\dimexpr(\\\\linewidth) * 16 / 18 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{}} & He \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
Li & Be & \\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{}} & B & C & N & O & F & Ne \\\\\\\\ \\\\cline{1-2} \\\\cline{13-18}
Na & Mg &  &  &  &  &  &  &  &  &  &  & Al & Si & P & S & Cl & Ar \\\\\\\\ \\\\hline
K & Ca & Sc & Ti & V & Cr & Mn & Fe & Co & Ni & Cu & Zn & Ga & Ge & As & Se & Br & Kr \\\\\\\\ \\\\hline
Rb & Sr & Y & Zr & Nb & Mo & Tc & Ru & Rh & Pd & Ag & Cd & In & Sn & Sb & Te & I & Xe \\\\\\\\ \\\\hline
Cs & Ba & LAN & Hf & Ta & W & Re & Os & Ir & Pt & Au & Hg & Tl & Pb & Bi & Po & At & Rn \\\\\\\\ \\\\hline
Fr & Ra & ACT & \\\\multicolumn{15}{|m{\\\\dimexpr(\\\\linewidth) * 15 / 18 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{}} \\\\\\\\ \\\\hline
\\\\multicolumn{18}{|m{\\\\dimexpr(\\\\linewidth) * 18 / 18 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{}} \\\\\\\\ \\\\hline
\\\\multicolumn{3}{|m{\\\\dimexpr(\\\\linewidth) * 3 / 18 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{Lanthanide}} & La & Ce & Pr & Nd & Pm & Sm & Eu & Gd & Tb & Dy & Ho & Er & Tm & Yb & Lu \\\\\\\\ \\\\hline
\\\\multicolumn{3}{|m{\\\\dimexpr(\\\\linewidth) * 3 / 18 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{Actinide}} & Ac & Th & Pa & U & Np & Pu & Am & Cm & Bk & Cf & Es & Fm & Md & No & Lw \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 1 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A \\\\\\\\ \\\\hline
\\\\end{longtabu}


Text at the end



\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 1 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
A \\\\\\\\ \\\\hline
\\\\end{longtabu}


Text at the



\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 4 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
a & \\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{}} &  \\\\\\\\ \\\\cline{1-1}
\\\\rowfont[l]{}
b &  &  & c \\\\\\\\ \\\\hline
\\\\end{longtabu}
\\\\captionof{table}{multirow}



\\\\begin{appendices}
\\\\part{\\\\label{appendix-1}Annexes 1}

\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\end{appendices}"
`;

exports[`mix-5 1`] = `
"\\\\image{http://www.numerama.com/content/uploads/2016/07/espace.jpg}[espace\\\\textsuperscript{\\\\footnotemark{footnote:node}}]


\\\\footnotetext[node]{\\\\footnotemark{footnote:node} Two things are infinite: the universe and human stupidity.}"
`;

exports[`mix-6 1`] = `
"\\\\image{http://img.youtube.com/vi/8TQIvdFl4aU/0.jpg}[\\\\externalLink{https://www.youtube.com/embed/8TQIvdFl4aU}{https://www.youtube.com/embed/8TQIvdFl4aU}]


Video: a caption



\\\\image{http://img.youtube.com/vi/8TQIvdFl4aU/0.jpg}[\\\\externalLink{https://www.youtube.com/embed/8TQIvdFl4aU}{https://www.youtube.com/embed/8TQIvdFl4aU}]


no caption"
`;

exports[`mix-7 1`] = `
"\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 2 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 2 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
cell & \\\\texttt{code with line break} \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 2 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{\\\\hyperref[appendix-1]{Code appendice 1}}} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{appendices}
\\\\part{\\\\label{appendix-1}Annexes 1}

\\\\begin{CodeBlock}{text}
line 1
line2
\\\\end{CodeBlock}
\\\\end{appendices}"
`;

exports[`paragraph 1`] = `
"\\\\part{first 1}


Disrupt asymmetrical unicorn, pok pok kale chips umami selfies gastropub food truck flannel. Blue bottle craft beer hexagon artisan. Chia gochujang crucifix, readymade hammock blog succulents sriracha raw denim scenester cray typewriter fashion axe art party. Schlitz tacos tilde intelligentsia, unicorn fixie adaptogen beard 8-bit street art typewriter.



\\\\chapter{second 1}


Literally selfies tbh lo-fi. Actually health goth ennui, brooklyn retro polaroid sriracha. Kogi live-edge mixtape marfa street art synth. Godard synth truffaut selfies, vape fanny pack subway tile. Stumptown af pabst, try-hard fam ethical actually four dollar toast. Microdosing kogi brooklyn, locavore jianbing etsy sartorial YOLO. Williamsburg salvia photo booth readymade listicle man braid.



Marfa pickled helvetica put a bird on it hot chicken williamsburg. Edison bulb asymmetrical keffiyeh schlitz iceland put a bird on it hoodie affogato. Tofu tote bag distillery viral knausgaard, health goth asymmetrical.



Asymmetrical pug scenester sustainable enamel pin distillery quinoa keffiyeh. Flannel humblebrag PBR\\\\&B polaroid banh mi wolf. Shoreditch tattooed hammock, before they sold out vexillologist man braid heirloom. Activated charcoal craft beer cloud bread meh biodiesel pabst.



\\\\section{third 1}


Art party keytar godard iceland neutra cronut. Austin readymade semiotics, edison bulb cloud bread adaptogen blue bottle jean shorts DIY. Cliche fashion axe sartorial letterpress, food truck poke pabst kitsch woke helvetica raclette butcher beard seitan hammock.



Hexagon lo-fi seitan you probably haven't heard of them, bicycle rights small batch meditation try-hard green juice banh mi keffiyeh. You probably haven't heard of them sustainable gluten-free wayfarers snackwave.



\\\\section{third 2}


\\\\subsection{fourth 1}


Mumblecore kombucha offal, health goth next level before they sold out gluten-free chicharrones keffiyeh. Mumblecore kickstarter hoodie fixie keffiyeh. Microdosing lo-fi taiyaki irony pok pok. Banjo brooklyn umami succulents flexitarian. Swag sartorial scenester synth viral.



\\\\subsubsection{fifth 1}


Banjo bespoke subway tile, street art drinking vinegar offal franzen. Pour-over green juice vaporware kale chips. Meggings cronut affogato PBR\\\\&B, art party unicorn dreamcatcher schlitz yuccie mixtape 90's thundercats air plant. Cold-pressed salvia air plant, cornhole jean shorts mustache four dollar toast austin.



\\\\section{third 3}


Meditation heirloom chicharrones, sartorial man braid hot chicken sustainable. Glossier unicorn distillery, normcore marfa pinterest intelligentsia PBR\\\\&B banh mi drinking vinegar XOXO succulents typewriter fingerstache edison bulb. Meditation ethical cronut glossier cliche kickstarter.



\\\\subsection{fourth 2}


Venmo bushwick food truck chartreuse fam. Everyday carry gastropub glossier, cold-pressed salvia migas keytar. Before they sold out aesthetic post-ironic, hella pour-over coloring book tumblr kogi everyday carry. Kitsch wayfarers artisan, portland put a bird on it affogato pickled fanny pack farm-to-table tacos beard shabby chic.



\\\\subsection{fourth 3}


Chambray intelligentsia vape listicle. Pok pok snackwave cronut retro hot chicken, trust fund master cleanse keytar forage dreamcatcher. Taiyaki actually deep v, godard small batch irony lumbersexual unicorn cardigan af. Irony lumbersexual salvia, pitchfork fam snackwave man bun. Kitsch jianbing intelligentsia freegan, waistcoat raw denim cloud bread vice cray etsy listicle skateboard jean shorts.



\\\\subsubsection{fifth 2}


Asymmetrical normcore portland, vaporware viral tote bag DIY slow-carb kogi fanny pack. Keffiyeh ennui church-key, irony VHS man bun edison bulb listicle cloud bread try-hard cred lumbersexual lo-fi glossier.



\\\\part{first 2}


\\\\chapter{second 2}


\\\\subsubsection{fifth 3}


Messenger bag locavore swag raclette brunch whatever, portland food truck. PBR\\\\&B cred mlkshk, poke letterpress waistcoat celiac. La croix letterpress forage keffiyeh."
`;

exports[`ping 1`] = `
"Hello \\\\ping{you} and \\\\ping{you_too}, and \\\\ping{also you}

"
`;

exports[`regression: code block without language 1`] = `
"\\\\begin{CodeBlock}{text}
a
\\\\end{CodeBlock}

"
`;

exports[`table 1`] = `
"\\\\begin{longtabu} spread 0pt {|X[-1]|X[-1]|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
1 & 2 \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
1 & 2 \\\\\\\\ \\\\hline
1 & 2 \\\\\\\\ \\\\hline
1 & 2 \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu} spread 0pt {|X[-1]|X[-1]|X[-1]|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
1 & 2 & 3 \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
1 & 2 \\\\\\\\ \\\\hline
1 & 2  & 3 \\\\\\\\ \\\\hline
1 & 2  & 3 \\\\\\\\ \\\\hline
\\\\end{longtabu}


Another test for inline image with overridden configuration:



\\\\begin{longtabu} spread 0pt {|X[-1]|X[-1]|} \\\\hline
\\\\rowfont[c]{\\\\bfseries}
c1 & c2 \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
c3 & \\\\inlineImage{https://zestedesavoir.com/media/galleries/426/56dc4a1e-416b-4a9d-830d-95b45d58a17a.png} \\\\\\\\ \\\\hline
\\\\end{longtabu}"
`;
